--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 		      	    <div class="extra">
 
-		     	    <img src="oficial.jpg" width="100px" >
+		     	    <img src="Oficial.jpg" width="100px" >
 		     	 </div>  
 
 		    </div>	
@@ -93,10 +93,10 @@
            		<p>
 
            		    	<a href="https://www.instagram.com/math_137/?hl=pt-br">
-           		        <img src="instagram.png" width="50px">
+           		        <img src="Instagram.png" width="50px">
            		        </a>
            		        <a href="https://api.whatsapp.com/send?phone=5584994137144&text=Chega%20junto">
-           		        <img src="whatsapp.jpg" width="50px">	
+           		        <img src="Whatsapp.jpg" width="50px">	
            		        </a>
            		        <a href="Mailto:francisco20142014@gmail.com?Subject=ME%20ENVIE%20EMAIL">
            		        <img src="Email.png" width="50px">	
